[package]
name = "popup-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
blight = "0.7.1"
eframe = "0.27.2"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
tokio = "1.37.0"

