[package]
name = "popup-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
blight = "0.7.1"
dirs = "5.0.1"
eframe = "0.27.2"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fs2 = "0.4.3"
# tokio = "1.37.0"
tokio = { version = "1.37.0", features = ["net", "io-util"] }

